# FLINT-precondition-labelling

./: .gitignore  README.md  flint_frame_service.py  openapi.yaml  pyproject.toml
activities/labelling/: README.md  add_labels.ipynb  add_labels_v2.ipynb  added_preconditions_to_labels.xlsx  train_BERTje_v1.ipynb  train_BERTje_v2.ipynb  updated_tags_v2.csv
activities/prompt_engineering/: engineer_prompts.ipynb  engineer_prompts_v2.ipynb  prompt_1.txt
activities/prompt_engineering/answers/: model:gpt-3.5-turbo-1106:prompt:prompt_v1:article:GDPR_art6.txt  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_2.txt:article:GDPR_6:date:2024-01-17 14:22:37.358459.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_2.txt:article:GDPR_art6:date:2024-01-17 13:57:53.015627.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_3.txt:article:GDPR_6:date:2024-01-17 14:29:56.961203.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_3.txt:article:GDPR_6:date:2024-01-17 14:33:11.229484.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_v1:article:GDPR_art6:date:2024-01-17 09:16:30.587151.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_v1:article:GDPR_art6:date:2024-01-17 10:24:02.689941.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_v1:article:GDPR_art6:date:2024-01-17 10:41:22.595982.md  model:gpt-3.5-turbo-1106:seed:42:temperature:0.0:prompt:prompt_v1:article:GDPR_art6:date:2024-01-17 13:54:07.539733.md  (+1 more)
utils/: spacy_visualizer.py
(+12 files in other folders)
