[tool.poetry]
name = "flint-precondition-labelling"
version = "0.1.0"
description = ""
authors = ["Julius <jbhuizing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.7.1"
ipykernel = "^6.28.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
