[tool.poetry]
name = "flint-precondition-labelling"
version = "0.1.0"
description = ""
authors = ["Julius <jbhuizing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.7.1"
ipykernel = "^6.28.0"
python-dotenv = "^1.0.0"
pandas = "^2.1.4"
datasets = "^2.16.1"
transformers = "^4.36.2"
torch = "^2.1.2"
ipywidgets = "^8.1.1"
scikit-learn = "^1.3.2"
openpyxl = "^3.1.2"
spacy = "^3.7.2"
google-generativeai = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
